tests/regression/error/hw5_error23.nex
anon (c, b) { var a; var a; }(1,1);
